[tool.poetry]
name = "cakemix-python"
version = "0.2.0"
description = "Cakemix is a tool for creating code template generators like create-react-app and npm-init. Avoiding you to waste time organizing a project."
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/vadolasi/cakemix/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent",
]
keywords = [
    "boilerplate",
    "cli",
    "generator",
    "templating",
]
packages = [
    { include = "cakemix" }
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/vadolasi/cakemix/issues/"
"Funding" = "https://donate.pypi.org/"
"Say Thanks!" = "https://saythanks.io/to/vitor036daniel@gmail.com/"
"Source" = "https://github.com/vadolasi/cakemix/"

[tool.poetry.dependencies]
python = ">=3.6.1,<=3.9.1"
click = "^7.1.2"
toml = "^0.10.2"
PyYAML = "^5.3.1"
SQLAlchemy = "^1.3.22"
importlib-metadata = { version = "^3.3.0", python = "<3.8" }
questionary = "^1.9.0"
rich = "^9.5.1"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
flakehell = "^0.7.1"
flake8-dashboard = "^0.1.4"
flake8-spellcheck = "^0.20.0"
flake8-todos = "^0.1.5"
flake8-pytest-style = "^1.3.0"
safety = "^1.10.0"
mypy = "^0.790"
pyformat = "^0.7"
add-trailing-comma = "^2.0.1"
isort = "^4.3.5"
pytest = "^6.2.1"
pytest-randomly = "^3.5.0"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
commitizen = "^2.11.1"
sqlalchemy-stubs = "^0.3"

[tool.flakehell]
format = "wemake"
show_source = true

[tool.flakehell.plugins]
"flake8-*" = ["+*", "-E400", "-DAR103"]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
"wemake-python-styleguide" = ["+*", "-WPS305"]

[tool.flakehell.exceptions."tests/"]
"flake8-bandit" = ["-*"]
"wemake-python-styleguide" = ["-WPS437"]

[tool.flakehell.exceptions."cakemix/output.py"]
"wemake-python-styleguide" = ["+*", "-WPS323"]

[tool.darglint]
strictness = "long"

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = "3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[tool.poetry.scripts]
cakemix = "cakemix.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
